compilateurDeca/src/test/deca/codegen/invalid/sans_objet/div_zero_chain.deca
// Description:
//    Runtime error: plusieurs affectations puis division par zero
//
// Resultats:
//    Erreur d'execution
{
    int a = 10;
    int b = 3;
    int z;
    z = a - a;
    b = b + 1;
    println(b);
    println(100 / z);
}
